2012-03-27  James Smith  <jsmith@ecoscentric.com>

	* tests/timers.c (TIMER_PRI): Add macro and manifests to allow
	easy manipulation of the base and delta between the timer
	priorities being tested.

2012-03-23  James Smith  <jsmith@ecoscentric.com>

	* include/var_io_usart.h: Provide common/shared UART pin
	definitions for F1, F2 and F4 devices using the new PIN wrapper
	macros. The RTS pin definitions for all STM32F families now use
	GPIO output since the driver uses software controlled
	RTS. Previously the F2/F4 defined the RTS pins as ALTFN.

	* include/var_io.h: Provide common/shared ADC pin definitions for
	F1, F2 and F4 devices using the new PIN_ANALOG() wrapper macro.

	* include/var_io_eth.h: Provide common MII pin definitions using
	the new PIN wrapper macros. Also remove MII_REMAP which was
	incorrectly using the wrong manifests (STM3210C-EVAL networking
	would not work) since decision taken that "plf_io.h" should
	contain board specific I/O pin mapping.

	* cdl/hal_cortexm_stm32.cdl: Remove CYGPKG_HAL_STM32_ETH and
	sub-option CYGHWR_HAL_STM32_ETH_MII_REMAP since ethernet pin
	mapping now present in platform specific "plf_io.h" header.

2012-03-22  James Smith  <jsmith@ecoscentric.com>

	* include/var_io_pins.h: Provide "common" wrapper macros
	CYGHWR_HAL_STM32_PIN_OUT, CYGHWR_HAL_STM32_PIN_ALTFN_OUT,
	CYGHWR_HAL_STM32_PIN_IN, CYGHWR_HAL_STM32_PIN_ALTFN_IN and
	CYGHWR_HAL_STM32_PIN_ANALOG for defining I/O pins to allow the
	same (where applicable) source calls to be used regardless of
	whether the target is F1 or HIPERFORMANCE (F2/F4).

	* cdl/hal_cortexm_stm32.cdl: Remove CYGPKG_HAL_STM32_ETH and
	sub-option CYGHWR_HAL_STM32_ETH_MII_REMAP since ethernet pin
	mapping now present in platform specific "plf_io.h" header.

2012-03-21  James Smith  <jsmith@ecoscentric.com>

	* include/var_io_pins.h: Provide similar support for F1 family
	devices as available for F2/F4 family devices by adding AT_LEAST